header-based-routing/ref-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: secure-python
  namespace: istio-system
spec:
  host: xxx.apps.xxxxx.com
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
